remove unnecessary css from template

--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -3,113 +3,15 @@
 
 <html lang="en">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>
-    {title}
-</title>
+    <title>
+        Stacked charts example
+    </title>
 
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>    
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.1/swfobject.js"></script>    
 
-
-<style>
-#header {
-	background-color: #ffffff;
-	color: #4E453D;
-	border-bottom: 8px solid #4E453D;
-}
-#header h1 {
-    font-family: Palatino, Georgia, serif;
-    font-weight: normal;
-	color: #333;
-	font-size: 1.4em;
-	letter-spacing: 0.2em;
-	text-transform: uppercase;
-}
-h1 {
-    font-family: "Museo", "Helvetica Neue", Helvetica, Arial, sans;
-    color: #333;
-    font-size: 1.2em;
-}
-body {
-	font-family: "Helvetica Neue", Arial, Tahoma;
-	font-size: 100%;
-}
-.module h2, .module caption {
-	font-size: 20px;
-	color: #666;
-	background-image: none;
-    background-color: #fff;
-	border-bottom: 2px solid #ebebeb;
-	margin-bottom: 5px;
-	margin-top: 10px;
-	padding: 0;
-}
-table {
-    border: none;
-}
-.module {
-    margin-top: 10px;
-}
-th {
-	color: #3A61A1;
-    font-size: 14px;
-    font-weight: normal;
-    letter-spacing: -0.05em;
-}
-table, thead, tbody, th, tr, td {
-	font-family: "Helvetica Neue", Arial, Tahoma;
-    border: 0px solid black;
-}
-thead th, tfoot td {
-    color:#666666;
-    font-size:13px;
-}
-.module table {
-    border-collapse: none;
-}
-div.breadcrumbs {
-    font-size: 14px;
-}
-
-thead {
-    font-size: 12px;
-}
-caption {
-	color: #3A61A1;
-    background-image: none;
-}
-h3 { 
-}
-#content-main {
-    border: 0px solid white;
-}
-#changelist {
-    border: 0px solid white;
-}
-
-#footer {
-    color: #999;
-    font-size: 80%;
-    text-align: center;
-    height: 100px;
-}
-
-.change-list .filtered { background:white; background-image: none !important; }
-#changelist-filter { position:absolute; top:0; right:0; z-index:1000; width:160px; border-left:1px solid #ddd; background:#cdc7c0; margin:0; }
-#changelist-filter h2 { color: #514737; margin-left: 10px; background-color: #cdc7c0 !important; font-size:15px; padding:0; border: 0px solid white; }
-#changelist-filter h3 { color: #514737; font-size:13px; margin-bottom:0; border-top:0px solid #ccc;}
-#changelist-filter ul { padding-left:0;margin-left:10px; }
-#changelist-filter li { list-style-type:none; margin-left:0; padding-left:0; }
-#changelist-filter a { color:#514737; }
-#changelist-filter a:hover { color:#036; }
-#changelist-filter li.selected { border-left:5px solid #847B6E; padding-left:5px;margin-left:-10px; }
-#changelist-filter li.selected a { color: #514737 !important; font-weight: bold; }
-
-</style>
-
-
-<meta name="robots" content="NONE,NOARCHIVE" />
+    <meta name="robots" content="NONE,NOARCHIVE" />
 
 </head>
 
